--- a/py_src/vue_principale.ui
+++ b/py_src/vue_principale.ui
@@ -999,86 +999,188 @@
           <property name="title">
            <string>Réseau</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout">
-           <item row="0" column="3">
-            <widget class="QLineEdit" name="lineEdit_ip_2">
-             <property name="text">
-              <string>168</string>
-             </property>
-             <property name="maxLength">
-              <number>3</number>
-             </property>
-            </widget>
+          <layout class="QVBoxLayout" name="verticalLayout_14">
+           <item>
+            <layout class="QGridLayout" name="gridLayout">
+             <item row="0" column="4">
+              <widget class="QLabel" name="label_30">
+               <property name="text">
+                <string>.</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="3">
+              <widget class="QLineEdit" name="lineEdit_ip_2">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>25</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>168</string>
+               </property>
+               <property name="maxLength">
+                <number>3</number>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="5">
+              <widget class="QLineEdit" name="lineEdit_ip_1">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>25</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>100</string>
+               </property>
+               <property name="maxLength">
+                <number>3</number>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QLineEdit" name="lineEdit_ip_3">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>25</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>192</string>
+               </property>
+               <property name="maxLength">
+                <number>3</number>
+               </property>
+               <property name="clearButtonEnabled">
+                <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_3">
+               <property name="text">
+                <string>Adresse IP :</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="6">
+              <widget class="QLabel" name="label_31">
+               <property name="text">
+                <string>.</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="2">
+              <widget class="QLabel" name="label_29">
+               <property name="text">
+                <string>.</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="7">
+              <widget class="QLineEdit" name="lineEdit_ip_0">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>25</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>1</string>
+               </property>
+               <property name="maxLength">
+                <number>3</number>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="8">
+              <spacer name="horizontalSpacer_2">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
            </item>
-           <item row="0" column="6">
-            <spacer name="horizontalSpacer_2">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="0" column="2">
-            <widget class="QLineEdit" name="lineEdit_ip_3">
-             <property name="text">
-              <string>192</string>
-             </property>
-             <property name="maxLength">
-              <number>3</number>
-             </property>
-             <property name="clearButtonEnabled">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_3">
-             <property name="text">
-              <string>Adresse IP :</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="2">
-            <widget class="QLineEdit" name="lineEdit_port">
-             <property name="text">
-              <string>42</string>
-             </property>
-             <property name="maxLength">
-              <number>5</number>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="4">
-            <widget class="QLineEdit" name="lineEdit_ip_1">
-             <property name="text">
-              <string>100</string>
-             </property>
-             <property name="maxLength">
-              <number>3</number>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_6">
-             <property name="text">
-              <string>Port :</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="5">
-            <widget class="QLineEdit" name="lineEdit_ip_0">
-             <property name="text">
-              <string>1</string>
-             </property>
-             <property name="maxLength">
-              <number>3</number>
-             </property>
-            </widget>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_10">
+             <item>
+              <widget class="QLabel" name="label_6">
+               <property name="text">
+                <string>Port :</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QLineEdit" name="lineEdit_port">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="maximumSize">
+                <size>
+                 <width>25</width>
+                 <height>16777215</height>
+                </size>
+               </property>
+               <property name="text">
+                <string>42</string>
+               </property>
+               <property name="maxLength">
+                <number>5</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_19">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
            </item>
           </layout>
          </widget>
@@ -1162,6 +1264,68 @@
    </layout>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>forward_left</tabstop>
+  <tabstop>forward_right</tabstop>
+  <tabstop>backward_right</tabstop>
+  <tabstop>backward_left</tabstop>
+  <tabstop>slider_ultrasonic_sensor_angle</tabstop>
+  <tabstop>spinBox_ultrasonic_sensor_angle</tabstop>
+  <tabstop>tabWidget_LEDs</tabstop>
+  <tabstop>horizontalSlider</tabstop>
+  <tabstop>spinBox_rgb_0_r</tabstop>
+  <tabstop>horizontalSlider_2</tabstop>
+  <tabstop>spinBox_rgb_0_g</tabstop>
+  <tabstop>horizontalSlider_3</tabstop>
+  <tabstop>spinBox_rgb_0_b</tabstop>
+  <tabstop>colour_picker_0</tabstop>
+  <tabstop>led_builtin_on</tabstop>
+  <tabstop>led_builtin_off</tabstop>
+  <tabstop>buzzer_button</tabstop>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>checkBox_inverse_motors</tabstop>
+  <tabstop>pwm_max_value</tabstop>
+  <tabstop>checkBox_inverse_left_motor_direction</tabstop>
+  <tabstop>spinBox_left_low_forward</tabstop>
+  <tabstop>spinBox_left_low_backward</tabstop>
+  <tabstop>spinBox_left_high_forward</tabstop>
+  <tabstop>spinBox_left_high_backward</tabstop>
+  <tabstop>checkBox_inverse_right_motor_direction</tabstop>
+  <tabstop>spinBox_right_low_forward</tabstop>
+  <tabstop>spinBox_right_low_backward</tabstop>
+  <tabstop>spinBox_right_high_forward</tabstop>
+  <tabstop>spinBox_right_high_backward</tabstop>
+  <tabstop>lineEdit_ip_3</tabstop>
+  <tabstop>lineEdit_ip_2</tabstop>
+  <tabstop>lineEdit_ip_1</tabstop>
+  <tabstop>lineEdit_ip_0</tabstop>
+  <tabstop>lineEdit_port</tabstop>
+  <tabstop>Annuler</tabstop>
+  <tabstop>Appliquer</tabstop>
+  <tabstop>console</tabstop>
+  <tabstop>flash_button</tabstop>
+  <tabstop>spinBox_rgb_1_b</tabstop>
+  <tabstop>horizontalSlider_6</tabstop>
+  <tabstop>colour_picker_1</tabstop>
+  <tabstop>spinBox_rgb_2_b</tabstop>
+  <tabstop>horizontalSlider_8</tabstop>
+  <tabstop>spinBox_rgb_2_g</tabstop>
+  <tabstop>horizontalSlider_7</tabstop>
+  <tabstop>spinBox_rgb_2_r</tabstop>
+  <tabstop>horizontalSlider_9</tabstop>
+  <tabstop>colour_picker_2</tabstop>
+  <tabstop>spinBox_rgb_3_r</tabstop>
+  <tabstop>horizontalSlider_11</tabstop>
+  <tabstop>spinBox_rgb_3_b</tabstop>
+  <tabstop>spinBox_rgb_1_g</tabstop>
+  <tabstop>horizontalSlider_10</tabstop>
+  <tabstop>horizontalSlider_12</tabstop>
+  <tabstop>spinBox_rgb_3_g</tabstop>
+  <tabstop>horizontalSlider_4</tabstop>
+  <tabstop>colour_picker_3</tabstop>
+  <tabstop>spinBox_rgb_1_r</tabstop>
+  <tabstop>horizontalSlider_5</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
@@ -1171,12 +1335,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>197</x>
-     <y>313</y>
+     <x>236</x>
+     <y>363</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>315</y>
+     <y>365</y>
     </hint>
    </hints>
   </connection>
@@ -1188,11 +1352,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>315</y>
+     <y>365</y>
     </hint>
     <hint type="destinationlabel">
-     <x>157</x>
-     <y>313</y>
+     <x>196</x>
+     <y>363</y>
     </hint>
    </hints>
   </connection>
@@ -1203,12 +1367,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>206</x>
-     <y>340</y>
+     <x>245</x>
+     <y>390</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>342</y>
+     <y>392</y>
     </hint>
    </hints>
   </connection>
@@ -1220,11 +1384,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>342</y>
+     <y>392</y>
     </hint>
     <hint type="destinationlabel">
-     <x>160</x>
-     <y>340</y>
+     <x>199</x>
+     <y>390</y>
     </hint>
    </hints>
   </connection>
@@ -1235,12 +1399,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>210</x>
-     <y>367</y>
+     <x>247</x>
+     <y>417</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>369</y>
+     <y>419</y>
     </hint>
    </hints>
   </connection>
@@ -1252,11 +1416,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>369</y>
+     <y>419</y>
     </hint>
     <hint type="destinationlabel">
-     <x>151</x>
-     <y>367</y>
+     <x>190</x>
+     <y>417</y>
     </hint>
    </hints>
   </connection>
@@ -1267,12 +1431,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>131</x>
-     <y>367</y>
+     <x>170</x>
+     <y>417</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>369</y>
+     <y>419</y>
     </hint>
    </hints>
   </connection>
@@ -1284,11 +1448,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>342</y>
+     <y>392</y>
     </hint>
     <hint type="destinationlabel">
      <x>247</x>
-     <y>340</y>
+     <y>390</y>
     </hint>
    </hints>
   </connection>
@@ -1300,11 +1464,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>369</y>
+     <y>419</y>
     </hint>
     <hint type="destinationlabel">
-     <x>235</x>
-     <y>367</y>
+     <x>247</x>
+     <y>417</y>
     </hint>
    </hints>
   </connection>
@@ -1315,12 +1479,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>181</x>
-     <y>340</y>
+     <x>220</x>
+     <y>390</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>342</y>
+     <y>392</y>
     </hint>
    </hints>
   </connection>
@@ -1331,12 +1495,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>193</x>
-     <y>313</y>
+     <x>232</x>
+     <y>363</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>315</y>
+     <y>365</y>
     </hint>
    </hints>
   </connection>
@@ -1348,11 +1512,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>315</y>
+     <y>365</y>
     </hint>
     <hint type="destinationlabel">
-     <x>155</x>
-     <y>313</y>
+     <x>194</x>
+     <y>363</y>
     </hint>
    </hints>
   </connection>
@@ -1364,11 +1528,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>247</x>
-     <y>367</y>
+     <y>417</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>369</y>
+     <y>419</y>
     </hint>
    </hints>
   </connection>
@@ -1380,11 +1544,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>369</y>
+     <y>419</y>
     </hint>
     <hint type="destinationlabel">
-     <x>207</x>
-     <y>367</y>
+     <x>246</x>
+     <y>417</y>
     </hint>
    </hints>
   </connection>
@@ -1395,12 +1559,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>202</x>
-     <y>340</y>
+     <x>241</x>
+     <y>390</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>342</y>
+     <y>392</y>
     </hint>
    </hints>
   </connection>
@@ -1412,11 +1576,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>342</y>
+     <y>392</y>
     </hint>
     <hint type="destinationlabel">
-     <x>160</x>
-     <y>340</y>
+     <x>199</x>
+     <y>390</y>
     </hint>
    </hints>
   </connection>
@@ -1427,12 +1591,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>186</x>
-     <y>313</y>
+     <x>225</x>
+     <y>363</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>315</y>
+     <y>365</y>
     </hint>
    </hints>
   </connection>
@@ -1444,11 +1608,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>315</y>
+     <y>365</y>
     </hint>
     <hint type="destinationlabel">
-     <x>141</x>
-     <y>313</y>
+     <x>180</x>
+     <y>363</y>
     </hint>
    </hints>
   </connection>
@@ -1460,11 +1624,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>247</x>
-     <y>367</y>
+     <y>417</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>369</y>
+     <y>419</y>
     </hint>
    </hints>
   </connection>
@@ -1476,11 +1640,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>369</y>
+     <y>419</y>
     </hint>
     <hint type="destinationlabel">
-     <x>168</x>
-     <y>367</y>
+     <x>207</x>
+     <y>417</y>
     </hint>
    </hints>
   </connection>
@@ -1491,12 +1655,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>205</x>
-     <y>340</y>
+     <x>244</x>
+     <y>390</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>342</y>
+     <y>392</y>
     </hint>
    </hints>
   </connection>
@@ -1508,11 +1672,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>342</y>
+     <y>392</y>
     </hint>
     <hint type="destinationlabel">
-     <x>152</x>
-     <y>340</y>
+     <x>191</x>
+     <y>390</y>
     </hint>
    </hints>
   </connection>
@@ -1523,12 +1687,12 @@
    <slot>setValue(int)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>188</x>
-     <y>313</y>
+     <x>227</x>
+     <y>363</y>
     </hint>
     <hint type="destinationlabel">
      <x>294</x>
-     <y>315</y>
+     <y>365</y>
     </hint>
    </hints>
   </connection>
@@ -1540,11 +1704,11 @@
    <hints>
     <hint type="sourcelabel">
      <x>294</x>
-     <y>315</y>
+     <y>365</y>
     </hint>
     <hint type="destinationlabel">
-     <x>119</x>
-     <y>313</y>
+     <x>158</x>
+     <y>363</y>
     </hint>
    </hints>
   </connection>
