--- a/py_src/vue_principale.ui
+++ b/py_src/vue_principale.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>537</width>
-    <height>634</height>
+    <width>532</width>
+    <height>678</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -166,24 +166,24 @@
                </property>
               </widget>
              </item>
-             <item row="1" column="0">
-              <widget class="QLabel" name="label_28">
-               <property name="text">
-                <string>Bouton 2 :</string>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="1">
-              <widget class="QLabel" name="state_button_1">
-               <property name="text">
-                <string>&lt;état du bouton 1&gt;</string>
-               </property>
-              </widget>
-             </item>
              <item row="1" column="1">
               <widget class="QLabel" name="state_button_2">
                <property name="text">
                 <string>&lt;état du bouton 2&gt;</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0">
+              <widget class="QLabel" name="label_32">
+               <property name="text">
+                <string>IR gauche :</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="0">
+              <widget class="QLabel" name="label_33">
+               <property name="text">
+                <string>IR droit :</string>
                </property>
               </widget>
              </item>
@@ -199,6 +199,34 @@
                 </size>
                </property>
               </spacer>
+             </item>
+             <item row="1" column="0">
+              <widget class="QLabel" name="label_28">
+               <property name="text">
+                <string>Bouton 2 :</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QLabel" name="state_button_1">
+               <property name="text">
+                <string>&lt;état du bouton 1&gt;</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QLabel" name="state_ir_2">
+               <property name="text">
+                <string>&lt;état IR 2&gt;</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="1">
+              <widget class="QLabel" name="state_ir_1">
+               <property name="text">
+                <string>&lt;état IR 1&gt;</string>
+               </property>
+              </widget>
              </item>
             </layout>
            </item>
@@ -223,6 +251,41 @@
               <layout class="QVBoxLayout" name="verticalLayout_9">
                <item>
                 <layout class="QGridLayout" name="gridLayout_6">
+                 <item row="1" column="0">
+                  <widget class="QLabel" name="label_16">
+                   <property name="text">
+                    <string>G</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="2" column="2">
+                  <widget class="QSpinBox" name="spinBox_rgb_0_b">
+                   <property name="maximum">
+                    <number>255</number>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="2" column="0">
+                  <widget class="QLabel" name="label_17">
+                   <property name="text">
+                    <string>B</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="0">
+                  <widget class="QLabel" name="label_15">
+                   <property name="text">
+                    <string>R</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="1" column="2">
+                  <widget class="QSpinBox" name="spinBox_rgb_0_g">
+                   <property name="maximum">
+                    <number>255</number>
+                   </property>
+                  </widget>
+                 </item>
                  <item row="0" column="3">
                   <spacer name="horizontalSpacer_7">
                    <property name="orientation">
@@ -236,34 +299,13 @@
                    </property>
                   </spacer>
                  </item>
-                 <item row="0" column="1">
-                  <widget class="QSlider" name="horizontalSlider">
+                 <item row="2" column="1">
+                  <widget class="QSlider" name="horizontalSlider_3">
                    <property name="maximum">
                     <number>255</number>
                    </property>
                    <property name="orientation">
                     <enum>Qt::Horizontal</enum>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="0" column="0">
-                  <widget class="QLabel" name="label_15">
-                   <property name="text">
-                    <string>R</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="0">
-                  <widget class="QLabel" name="label_16">
-                   <property name="text">
-                    <string>G</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="0" column="2">
-                  <widget class="QSpinBox" name="spinBox_rgb_0_r">
-                   <property name="maximum">
-                    <number>255</number>
                    </property>
                   </widget>
                  </item>
@@ -277,29 +319,15 @@
                    </property>
                   </widget>
                  </item>
-                 <item row="2" column="0">
-                  <widget class="QLabel" name="label_17">
-                   <property name="text">
-                    <string>B</string>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="1" column="2">
-                  <widget class="QSpinBox" name="spinBox_rgb_0_g">
+                 <item row="0" column="2">
+                  <widget class="QSpinBox" name="spinBox_rgb_0_r">
                    <property name="maximum">
                     <number>255</number>
                    </property>
                   </widget>
                  </item>
-                 <item row="2" column="2">
-                  <widget class="QSpinBox" name="spinBox_rgb_0_b">
-                   <property name="maximum">
-                    <number>255</number>
-                   </property>
-                  </widget>
-                 </item>
-                 <item row="2" column="1">
-                  <widget class="QSlider" name="horizontalSlider_3">
+                 <item row="0" column="1">
+                  <widget class="QSlider" name="horizontalSlider">
                    <property name="maximum">
                     <number>255</number>
                    </property>
@@ -861,15 +889,22 @@
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="0">
-                 <widget class="QLabel" name="label_9">
+                <item row="0" column="0">
+                 <widget class="QLabel" name="label">
                   <property name="text">
-                   <string>Seuil haut, marche avant :</string>
+                   <string>Seuil bas, marche avant :</string>
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="1">
-                 <widget class="QSpinBox" name="spinBox_left_high_forward"/>
+                <item row="1" column="1">
+                 <widget class="QSpinBox" name="spinBox_left_low_backward"/>
+                </item>
+                <item row="3" column="0">
+                 <widget class="QLabel" name="label_10">
+                  <property name="text">
+                   <string>Seuil haut, marche arrière :</string>
+                  </property>
+                 </widget>
                 </item>
                 <item row="0" column="2">
                  <spacer name="horizontalSpacer_3">
@@ -887,25 +922,42 @@
                 <item row="0" column="1">
                  <widget class="QSpinBox" name="spinBox_left_low_forward"/>
                 </item>
-                <item row="1" column="1">
-                 <widget class="QSpinBox" name="spinBox_left_low_backward"/>
-                </item>
-                <item row="0" column="0">
-                 <widget class="QLabel" name="label">
-                  <property name="text">
-                   <string>Seuil bas, marche avant :</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="3" column="0">
-                 <widget class="QLabel" name="label_10">
-                  <property name="text">
-                   <string>Seuil haut, marche arrière :</string>
-                  </property>
-                 </widget>
+                <item row="2" column="1">
+                 <widget class="QSpinBox" name="spinBox_left_high_forward"/>
                 </item>
                 <item row="3" column="1">
                  <widget class="QSpinBox" name="spinBox_left_high_backward"/>
+                </item>
+                <item row="2" column="0">
+                 <widget class="QLabel" name="label_9">
+                  <property name="text">
+                   <string>Seuil haut, marche avant :</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_11">
+                <item>
+                 <spacer name="horizontalSpacer_20">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="reset_left_motor">
+                  <property name="text">
+                   <string>Reset</string>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </item>
@@ -977,6 +1029,30 @@
                  <widget class="QLabel" name="label_12">
                   <property name="text">
                    <string>Seuil haut, marche arrière :</string>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item>
+               <layout class="QHBoxLayout" name="horizontalLayout_12">
+                <item>
+                 <spacer name="horizontalSpacer_21">
+                  <property name="orientation">
+                   <enum>Qt::Horizontal</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>40</width>
+                    <height>20</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
+                <item>
+                 <widget class="QPushButton" name="reset_right_motor">
+                  <property name="text">
+                   <string>Reset</string>
                   </property>
                  </widget>
                 </item>
@@ -1282,7 +1358,6 @@
   <tabstop>led_builtin_on</tabstop>
   <tabstop>led_builtin_off</tabstop>
   <tabstop>buzzer_button</tabstop>
-  <tabstop>tabWidget</tabstop>
   <tabstop>checkBox_inverse_motors</tabstop>
   <tabstop>pwm_max_value</tabstop>
   <tabstop>checkBox_inverse_left_motor_direction</tabstop>
